--- a/index.html
+++ b/index.html
@@ -5,33 +5,60 @@
     <meta charset="utf-8" />
 </head>
 <body>
-    <h1>Upload file</h1>
+    <h1>Cover</h1>
 
-    
-
-    <form method="POST" action="/upload-profile-pic" enctype="multipart/form-data">
+    <form method="POST" action="/cover-download" enctype="multipart/form-data">
         <div>
-            <input type="text" name="userName1">
-            <input type="text" name="userName2">
-            <label>Select your profile picture:</label>
-            <input type="file" name="profile_pic" />
+            <input type="text" name="CardName">
+            <input type="text" name="Description">
+            <label>Choose a cover image:</label>
+            <input type="file" name="Cover" />
 
         </div>
         <div>
-            <input type="submit" name="btn_upload_profile_pic" value="Upload" />
+            <input type="submit" name="btn_upload_cover_photo" value="Upload" />
         </div>
     </form>
+	
+	<h1>MODELS</h1>
 
+    <form method="POST" action="/Model-download" enctype="multipart/form-data">
+        <div>
+            <labelChoose models:</label>
+            <input type="file" name="Model" multiple/>
+        </div>
+        <div>
+            <input type="submit" name="btn_upload_cover_model" value="Upload" />
+        </div>
+    </form>
+	
+	<h1>Description</h1>
+
+    <form method="POST" action="/Body-download" enctype="multipart/form-data">
+        <div>
+            <input type="text" name="Foreword">
+            <input type="text" name="DescriptionInstructions">
+			<input type="text" name="Postscript">
+            <label>Select your profile picture:</label>
+            <input type="file" name="Body" multiple/>
+
+        </div>
+        <div>
+            <input type="submit" name="btn_upload_cover_body" value="Upload" />
+        </div>
+    </form>
+	
+<!--
     <form method="POST" action="/upload-multiple-images" enctype="multipart/form-data">
         <div>           
             <label>Select multiple images:</label>
-            <input type="file" name="multiple_images" multiple /> <!-- multiple позволяет загружать много изображений -->
+            <input type="file" name="multiple_images" multiple />  <!--multiple позволяет загружать много изображений
         </div>
         <div>
             <input type="submit" name="btn_upload_multiple_images" value="Upload" />
         </div>
     </form>
-
+      -->
 
 </body>
 <html>
